fix: Move tabs to the right by 5px to align with network visualizer

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -267,7 +267,7 @@ hr {
 
 .tabs {
     padding-top: 5px;
-    left: 0;
+    left: 5px;
     position: relative;
     width: 290px;
     margin: 0;
